--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         }
       });
     </script>
-    <link rel="icon" type="image/x-icon" href="https://y7v4p6k4.ssl.hwcdn.net/522709f4445bb744740000ae/32.ico">
-    <link rel="apple-touch-icon" href="https://y7v4p6k4.ssl.hwcdn.net/522709f4445bb744740000ae/favicon256.png">
+    <link rel="icon" type="image/x-icon" src="images/32.ico">
+    <link rel="apple-touch-icon" src="images/favicon256.png">
     <script type="text/javascript" src="js/webflow.js" defer></script>
   </head><body>
   <div class="section header">
@@ -101,7 +101,7 @@
         </div>
         <div class="w-col w-col-4">
           <a class="w-inline-block snippet" href="#">
-            <img class="example-image" src="images/animation.gif" alt="animation.gif">
+            <img class="example-image" src="images/wanpai.png" alt="wanpai.png">
             <div class="snippet-text-section"><a class="text-url" href="https://itunes.apple.com/cn/app/wan-pai-zui-huo-duan-shi-pin/id618952474?mt=8">WanPai concept icon</a>
               <div class="snippet-text">Icon</div>
             </div>
@@ -129,6 +129,13 @@
             <a class="button twitter" href="https://twitter.com/SHIYIYANG" target="_blank"></a>
             <a class="button weibo" href="http://weibo.com/sophiay" target="_blank"></a>
             <a class="button email" href="mailto:shiyi1110@gmail.com?subject=Hello!" target="_blank"></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
+</html>lo!" target="_blank"></a>
           </div>
         </div>
       </div>
