--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         }
       });
     </script>
-    <link rel="icon" type="image/x-icon" src="images/32.ico">
-    <link rel="apple-touch-icon" src="images/favicon256.png">
+    <link rel="icon shortcut" href="http://sophiayang.info/images/32.ico">;
+    <link rel="apple-touch-icon" href="http://sophiayang.info/images/favicon256.png">
     <script type="text/javascript" src="js/webflow.js" defer></script>
   </head><body>
   <div class="section header">
@@ -135,7 +135,7 @@
     </div>
   </div>
 </body>
-</html>lo!" target="_blank"></a>
+</html></a>
           </div>
         </div>
       </div>
