--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
       });
     </script>
-    <link rel="icon shortcut" href="http://sophiayang.info/images/32.ico">;
+    <link rel="icon shortcut" href="http://sophiayang.info/images/32.ico">
     <link rel="apple-touch-icon" href="http://sophiayang.info/images/favicon256.png">
     <script type="text/javascript" src="js/webflow.js" defer></script>
   </head><body>
@@ -55,6 +55,34 @@
           <a class="w-inline-block snippet" href="#">
             <img class="example-image" src="images/mobile.png" alt="mobile.png">
             <div class="snippet-text-section"><a class="text-url" href="#">Delicious Mobile Design</a>
+              <div class="snippet-text">iOS &amp; Android App</div>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="w-container work">
+      <div class="w-row snippet-row">
+        <div class="w-col w-col-4">
+          <a class="w-inline-block snippet" href="#">
+            <img class="example-image" src="images/avoscloud.png" alt="avoscloud.png">
+            <div class="snippet-text-section"><a class="text-url" href="https://cn.avoscloud.com/" target="_blank">AVOS Cloud Web Design</a>
+              <div class="snippet-text">Web</div>
+            </div>
+          </a>
+        </div>
+        <div class="w-col w-col-4">
+          <a class="w-inline-block snippet" href="#">
+            <img class="example-image" src="images/pboard.png" alt="pboard.png">
+            <div class="snippet-text-section"><a class="text-url" href="https://itunes.apple.com/us/app/pboard-location-based-imageboard/id639172855?mt=8">pBoard App Design</a>
+              <div class="snippet-text">iOS App</div>
+            </div>
+          </a>
+        </div>
+        <div class="w-col w-col-4">
+          <a class="w-inline-block snippet" href="#">
+            <img class="example-image" src="images/sunflower.png" alt="sunflower.png">
+            <div class="snippet-text-section"><a class="text-url" href="http://www.25pp.com/ipad/soft/info_1071918.html">App Design</a>
               <div class="snippet-text">iOS App</div>
             </div>
           </a>
@@ -129,13 +157,6 @@
             <a class="button twitter" href="https://twitter.com/SHIYIYANG" target="_blank"></a>
             <a class="button weibo" href="http://weibo.com/sophiay" target="_blank"></a>
             <a class="button email" href="mailto:shiyi1110@gmail.com?subject=Hello!" target="_blank"></a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</body>
-</html></a>
           </div>
         </div>
       </div>
