--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="w-col w-col-4">
           <a class="w-inline-block snippet" href="#">
             <img class="example-image" src="images/mobile.png" alt="mobile.png">
-            <div class="snippet-text-section"><a class="text-url" href="#">Delicious Mobile Design</a>
+            <div class="snippet-text-section"><a class="text-url" href="https://itunes.apple.com/us/app/delicious-official-app/id580295142?mt=8">Delicious Mobile Design</a>
               <div class="snippet-text">iOS &amp; Android App</div>
             </div>
           </a>
@@ -155,6 +155,7 @@
         <div class="w-col w-col-6 footer-nav-bar">
           <div class="social" id="social">
             <a class="button twitter" href="https://twitter.com/SHIYIYANG" target="_blank"></a>
+            <a class="button dribbble" href="http://dribbble.com/SophiaYang" target="_blank"></a>
             <a class="button weibo" href="http://weibo.com/sophiay" target="_blank"></a>
             <a class="button email" href="mailto:shiyi1110@gmail.com?subject=Hello!" target="_blank"></a>
           </div>
