--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="w-container work">
       <div class="w-row snippet-row">
         <div class="w-col w-col-4">
-          <a class="w-inline-block snippet" href="#">
+          <a class="w-inline-block snippet" href="http://delicious.com/sophiayang" target="_blank">
             <img class="example-image" src="images/web02.png" alt="web02.png">
             <div class="snippet-text-section"><a class="text-url" href="http://delicious.com/sophiayang" target="_blank">Delicious Concept Design</a>
               <div class="snippet-text">Recent work</div>
@@ -44,17 +44,17 @@
           </a>
         </div>
         <div class="w-col w-col-4">
-          <a class="w-inline-block snippet" href="#">
+          <a class="w-inline-block snippet" href="http://delicious.com/sophiayang" target="_blank">
             <img class="example-image" src="images/web01.png" alt="web01.png">
-            <div class="snippet-text-section"><a class="text-url" href="http://delicious.com/sophiayang">Delicious Concept Design</a>
+            <div class="snippet-text-section"><a class="text-url" href="http://delicious.com/sophiayang" target="_blank">Delicious Concept Design</a>
               <div class="snippet-text">Web</div>
             </div>
           </a>
         </div>
         <div class="w-col w-col-4">
-          <a class="w-inline-block snippet" href="#">
+          <a class="w-inline-block snippet" href="https://itunes.apple.com/us/app/delicious-official-app/id580295142?mt=8" target="_blank">
             <img class="example-image" src="images/mobile.png" alt="mobile.png">
-            <div class="snippet-text-section"><a class="text-url" href="https://itunes.apple.com/us/app/delicious-official-app/id580295142?mt=8">Delicious Mobile Design</a>
+            <div class="snippet-text-section"><a class="text-url" href="https://itunes.apple.com/us/app/delicious-official-app/id580295142?mt=8" target="_blank">Delicious Mobile Design</a>
               <div class="snippet-text">iOS &amp; Android App</div>
             </div>
           </a>
@@ -64,25 +64,25 @@
     <div class="w-container work">
       <div class="w-row snippet-row">
         <div class="w-col w-col-4">
-          <a class="w-inline-block snippet" href="#">
+          <a class="w-inline-block snippet" href="https://cn.avoscloud.com/" target="_blank">
             <img class="example-image" src="images/avoscloud.png" alt="avoscloud.png">
-            <div class="snippet-text-section"><a class="text-url" href="https://cn.avoscloud.com/" target="_blank">AVOS Cloud Web Design</a>
+            <div class="snippet-text-section"><a class="text-url" href="https://cn.avoscloud.com" target="_blank">AVOS Cloud Web Design</a>
               <div class="snippet-text">Web</div>
             </div>
           </a>
         </div>
         <div class="w-col w-col-4">
-          <a class="w-inline-block snippet" href="#">
+          <a class="w-inline-block snippet" href="https://itunes.apple.com/us/app/pboard-location-based-imageboard/id639172855?mt=8" target="_blank">
             <img class="example-image" src="images/pboard.png" alt="pboard.png">
-            <div class="snippet-text-section"><a class="text-url" href="https://itunes.apple.com/us/app/pboard-location-based-imageboard/id639172855?mt=8">pBoard App Design</a>
+            <div class="snippet-text-section"><a class="text-url" href="https://itunes.apple.com/us/app/pboard-location-based-imageboard/id639172855?mt=8" target="_blank">pBoard App Design</a>
               <div class="snippet-text">iOS App</div>
             </div>
           </a>
         </div>
         <div class="w-col w-col-4">
-          <a class="w-inline-block snippet" href="#">
+          <a class="w-inline-block snippet" href="http://www.25pp.com/ipad/soft/info_1071918.html" target="_blank">
             <img class="example-image" src="images/sunflower.png" alt="sunflower.png">
-            <div class="snippet-text-section"><a class="text-url" href="http://www.25pp.com/ipad/soft/info_1071918.html">App Design</a>
+            <div class="snippet-text-section"><a class="text-url" href="http://www.25pp.com/ipad/soft/info_1071918.html" target="_blank">App Design</a>
               <div class="snippet-text">iOS App</div>
             </div>
           </a>
@@ -92,9 +92,9 @@
     <div class="w-container work">
       <div class="w-row snippet-row">
         <div class="w-col w-col-4">
-          <a class="w-inline-block snippet" href="#">
+          <a class="w-inline-block snippet" href="http://iconview.net" target="_blank">
             <img class="example-image" src="images/animation.gif" alt="animation.gif">
-            <div class="snippet-text-section"><a class="text-url" href="http://iconview.net/">Iconview iOS App</a>
+            <div class="snippet-text-section"><a class="text-url" href="http://iconview.net" target="_blank">Iconview iOS App</a>
               <div class="snippet-text">Designer Tool</div>
             </div>
           </a>
@@ -128,17 +128,17 @@
           </a>
         </div>
         <div class="w-col w-col-4">
-          <a class="w-inline-block snippet" href="#">
+          <a class="w-inline-block snippet" href="https://itunes.apple.com/cn/app/wan-pai-zui-huo-duan-shi-pin/id618952474?mt=8" target="_blank">
             <img class="example-image" src="images/wanpai.png" alt="wanpai.png">
-            <div class="snippet-text-section"><a class="text-url" href="https://itunes.apple.com/cn/app/wan-pai-zui-huo-duan-shi-pin/id618952474?mt=8">WanPai concept icon</a>
+            <div class="snippet-text-section"><a class="text-url" href="https://itunes.apple.com/cn/app/wan-pai-zui-huo-duan-shi-pin/id618952474?mt=8" target="_blank">WanPai concept icon</a>
               <div class="snippet-text">Icon</div>
             </div>
           </a>
         </div>
         <div class="w-col w-col-4">
-          <a class="w-inline-block snippet" href="#">
+          <a class="w-inline-block snippet" href="https://itunes.apple.com/us/app/wireshare-share-files-your/id527465632?mt=8" target="_blank">
             <img class="example-image" src="images/wireshare.png" alt="wireshare.png">
-            <div class="snippet-text-section"><a class="text-url" href="https://itunes.apple.com/us/app/wireshare-share-files-your/id527465632?mt=8">Wireshare</a>
+            <div class="snippet-text-section"><a class="text-url" href="https://itunes.apple.com/us/app/wireshare-share-files-your/id527465632?mt=8" target="_blank">Wireshare</a>
               <div class="snippet-text">iOS App</div>
             </div>
           </a>
