--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@ www.typeandgrids.com
 			
 			<h3>About me</h3>
 			<p>
-				Hi, i'm Sophia yang.An UI/UX designer living in Beijing. Check my <a href="http://www.linkedin.com/pub/shiyi-yang/25/162/a9b" target="_blank">Resume </a> to get started!
+				Hi, i'm Sophia Yang.An UI/UX designer living in Beijing. Check my <a href="http://www.linkedin.com/pub/shiyi-yang/25/162/a9b" target="_blank">Resume </a> to get started!
 			</p>
 			
 			<p>
