--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@ www.typeandgrids.com
 	<nav>
 		<ul>
 			<li><button id="workPage">Work</button></li>
+			<li><a href="http://sophiadesignerd.tumblr.com/" target="_blank">Life</a></li>
 			<li><button id="aboutPage">About</button></li>
-			<!--<li><a href="http://wordpress.org" target="_blank">Blog</a></li>-->
 		</ul>
 	</nav>
 	<hr />
@@ -493,6 +493,7 @@ www.typeandgrids.com
 			<li><a href="http://dribbble.com/SophiaYang">Dribbble</a></li>
 			<li><a href="http://weibo.com/sophiay" target="_blank">Weibo</a></li>
 			<li><a href="https://twitter.com/SHIYIYANG" target="_blank">Twitter</a></li>
+			<li><a href="http://instagram.com/sophiayoung" target="_blank">Instagram</a></li>
 			<li><a href="mailto:shiyi1110@hotmail.com">Email</a></li>
 			<!--Notice: The "Powered by Type & Grids" link in the footer is required in the Free version. Upgrade to the Pro version if you would like to remove it. (www.typeandgrids.com/pirates) -->
 			<li>Powered by <a href="http://www.typeandgrids.com" target="_blank">Type &amp; Grids</a></li>
